--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <header>
         <div>
             <img id="img-redes" src="img/img-redes.png" alt="Imagem de Pessoas segurando Logo de Redes Sociais">
-            <p id="frase">work hard in silence, let your success be the noise.</p>
+            <div class="typewriter">
+                <p id="frase">work hard in silence, let your success be the noise.</p>
+            </div>
         </div>
     </header>
     <main id="redes">
