atualização na animação

--- a/index.html
+++ b/index.html
@@ -10,31 +10,30 @@
 <body>
     <header>
         <div>
-            <img id="img-redes" src="img/img-redes.png" alt="Imagem de Pessoas segurando Logo de Redes Sociais">
+            <img id="img-redes" src="img/illustration-iphone.png" alt="Imagem de Pessoas segurando Logo de Redes Sociais">
             <div class="typewriter">
                 <p id="frase">work hard in silence, let your success be the noise.</p>
             </div>
         </div>
     </header>
     <main id="redes">
-        <a href="https://www.instagram.com/brennoeduardoi/" target="_blank">
             <div class="social" id="instagram">
-                <img class="logo" src="img/instagram.png" alt="Logo Instagram">
+                <a href="https://www.instagram.com/brennoeduardoi/" target="_blank"><img class="logo" src="img/instagram.png" alt="Logo Instagram">
                 <p class="paragrafo">Instagram</p>
+                </a>
             </div>
-        </a>
-        <a href="https://www.linkedin.com/in/brennoeduardo/" target="_blank">
             <div class="social" id="linkedin">
-                <img class="logo" src="img/linkedin.png" alt="Logo Linkedin">
-                <p class="paragrafo">Linkedin</p>
+                <a href="https://www.linkedin.com/in/brennoeduardo/" target="_blank">
+                    <img class="logo" src="img/linkedin.png" alt="Logo Linkedin">
+                    <p class="paragrafo">Linkedin</p>
+                </a>
             </div>
-        </a>
-        <a href="https://github.com/brennoeduardo" target="_blank">
             <div class="social" id="github">
-                <img class="logo" src="img/github.png" alt="Logo Github">
-                <p class="paragrafo">Github</p>
+                <a href="https://github.com/brennoeduardo" target="_blank">
+                    <img class="logo" src="img/github.png" alt="Logo Github">
+                    <p class="paragrafo">Github</p>
+                </a>
             </div>
-        </a>
     </main>
     <footer>
         <p>© Desenvolvido por Brenno Eduardo</p>
